Fixed the gap at bottom of page by setting overflow-y: hidden on <main>. Added padding to sidebar and main panels.

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,4 +1,11 @@
 footer{
+	text-align: center;
+
+	> a{
+		display: block;
+		margin-bottom: 20px;
+	}
+
 	ul{
 	    display: flex;
 	    flex-direction: row;
