--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,7 +1,8 @@
 main{
+	padding: 20px 4%;
 	justify-content: flex-start;
 	flex: 0 0 70%;
 	height: 100vh;
-	overflow: scroll;
+	overflow-y: scroll;
 	background: #C1C1C1;
 }
